--- a/src/utils/loader.css
+++ b/src/utils/loader.css
@@ -22,18 +22,22 @@
 }
 
 @-webkit-keyframes spin {
+
   0% { 
-    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   100% {
-    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes spin {
+  
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -46,21 +50,26 @@
 }
 
 @-webkit-keyframes _animatebottom {
+
   from {
     bottom:-100px;
     opacity:0;
-  } 
+  }
+
   to {
     bottom:0px;
     opacity:1;
   }
 }
-@keyframes _animatebottom { 
-  from{
+
+@keyframes _animatebottom {
+
+  from {
     bottom:-100px;
     opacity:0;
-  } 
-  to{
+  }
+
+  to {
     bottom:0;
     opacity:1;
   }
