--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,7 +19,7 @@
   padding: 8px 0;
 }
 
-.label>.input {
+.input {
   font-family: 'Press Start 2P', cursive;
   border: none;
   border-radius: 15px;
