--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,4 @@
-:root {
-  --primary: #18bcee;
-  --secondary: yellowgreen;
-  --background: #282c34;
-  --black: #212121;
-}
-
-.App , .btn , .label .input  , .container-header {
+.App , .btn , .label .input , .container-header {
   font-family: 'Press Start 2P', cursive;
 }
 
@@ -46,20 +39,20 @@
 }
 
 .btn {
-  background-color: var(--secondary);
+  background-color: yellowgreen;
   border: none;
   height: 48px;
   padding: 0 22px;
 }
 
 .btn-play {
-  border-left: 1px dotted var(--black);
+  border-left: 1px dotted #212121;
   border-radius: 15px 0 0 15px;
   width: 196px;
 }
 
 .btn-settings {
-  border-left: 1px dotted var(--black);
+  border-left: 1px dotted #212121;
   border-radius: 0 15px 15px 0;
 }
 
