--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,12 +2,7 @@
   font-family: 'Press Start 2P', cursive;
 }
 
-.form .label ,
-.login ,
-.login .form ,
-.navigation ,
-.questions ,
-.questions .answers {
+.form .label , .login , .login .form , .navigation , .questions , .questions .answers {
   display: flex;
 }
 
