--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,16 +1,30 @@
-.App , .btn , .label .input , .container-header {
-  font-family: 'Press Start 2P', cursive;
+.App,
+.btn,
+.label .input,
+.container-header {
+  font-family: "Press Start 2P", cursive;
 }
 
-.form .label , .login , .login .form , .navigation , .questions , .questions .answers, .game {
+.form .label,
+.login,
+.login .form,
+.navigation,
+.questions,
+.questions .answers,
+.game {
   display: flex;
 }
 
-.login .form , .login , .questions {
+.login .form,
+.login,
+.questions {
   align-items: center;
 }
 
-.form .label , .login .form , .login, .game {
+.form .label,
+.login .form,
+.login,
+.game {
   flex-direction: column;
 }
 
@@ -20,14 +34,15 @@
   padding: 8px 0;
 }
 
-.login, .form {
+.login,
+.form {
+  background: #370617;
   width: 600px;
-  background: #010326;
 }
 
 .label .input {
-  border: 5px solid black;
   border-radius: 1px;
+  border: 5px solid black;
   font-size: 1.2rem;
   height: 48px;
   margin-top: 12px;
@@ -38,66 +53,98 @@
 .navigation {
   display: flex;
   justify-content: space-between;
-  margin: 0;
   margin-top: 32px;
+  margin: 0;
   padding: 0;
   width: 80%;
 }
 
-.btn {
-  border: none;
-  height: 80px;
-}
-
 .btn-play {
-  border: none;
-  border-right: none;
   border-radius: 1px 0 0 1px;
+  border-right: none;
+  border: none;
   width: 80%;
 }
 
 .btn-settings {
-  border: none;
   border-left: 3px dotted #212121;
   border-radius: 0 1px 1px 0;
+  border: none;
   width: 20%;
 }
 
 /* Game */
 
 .game {
+  height: 100vh;
   justify-content: space-between;
   width: 100%;
-  height: 100vh;
 }
 
 .container-header {
+  align-items: center;
+  background-color: #0d0d0d;
   display: flex;
   font-size: 1.5rem;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
+}
+
+.subcontainer {
   align-items: center;
-  background-color: #0D0D0D;
+  display: flex;
+  flex-direction: row;
+  font-size: 3rem;
+  justify-items: center;
+  margin-top: 15px;
+  padding-left: 50px;
+  justify-content: space-evenly;
+}
+
+.name{
+  border-right: solid;
+  padding-right: 50px;
+}
+
+.space {
+  align-items: center;
+  margin-top: 15px;
+  padding-left: 50px;
 }
 
 .container-header .score {
-  font-size: 4.0rem;
+  align-items: center;
+  display: flex;
+  flex-direction: row-reverse;
+  font-size: 3rem;
+  justify-items: center;
   margin-top: 15px;
+  padding-left: 50px;
 }
 
-.btn-answer {
-  margin: 4px;
-  width: 25%;
+.nes-icon {
+  height: 16px !important;
+  margin: 0 16px;
+  width: 16px !important;
 }
 
 .questions {
-  background: #010326;
+  background: #370617;
   flex-direction: column;
   width: 90%;
 }
 
 .questions .answers {
   justify-content: space-between;
-  width: 90%;
   padding: 32px 0;
+  width: 90%;
+}
+
+.questions-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.interviewer {
+  align-self: flex-start;
 }
